--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-gesture-handler": "^2.22.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0"
+    "react-native-screens": "^4.5.0",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
